# Gena

./: Cargo.toml  README.md
assets/: shader.wgsl
crates/app/: Cargo.toml
crates/app/src/: app.rs  editor_window.rs
crates/engine/: Cargo.toml
crates/engine/src/: assets.rs  delta_timer.rs  engine.rs  fs.rs  game_resource.rs  gpu.rs  lib.rs  resources.rs  shader.rs  sprite.rs  texture.rs  uniforms.rs  vertex.rs
crates/engine/src/core/: camera.rs  math.rs  mod.rs  scene.rs  transform.rs
crates/engine/src/renderer/: mod.rs  passes.rs  traits.rs
crates/engine/src/window/: gui.rs  mod.rs  traits.rs  window_manager.rs  window_state.rs
crates/engine/src/window/tool_window/: mod.rs
crates/game/: Cargo.toml
crates/game/src/: app.rs  editor_window.rs  engine.rs  main.rs
