[workspace]
members = [
    "crates/game",
    "crates/engine",
]
resolver = "2"

[workspace.dependencies]
# wgpu = "26.0.1"
winit = { version = "0.30", features = ["rwh_05"] }
pollster = "0.4"
nalgebra = "0.34"
bytemuck = { version = "1.24", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
tobj = "4.0.3"
egui = "0.32"
egui-wgpu = { version = "0.32", features = ["winit"] }
egui-winit = { version = "0.32" }
egui_dock = "0.17.0"
tokio = { version = "1.47.1", features = ["full"] }
# hecs = "0.10.5"
image = "0.25.9"
uuid = { version = "1.18.1", features = ["v4"] }
