[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
nalgebra = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tobj = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_dock = { workspace = true }
# hecs = { workspace = true }
image = { workspace = true }
uuid = { workspace = true }
